# keywordsai-example-projects

./: package.json
example_scripts/python/: custom_workflow.ipynb  experiment_custom_workflow.ipynb  gemini_sdk_example.py  langraph.py  pyproject.toml  traces
example_scripts/typescript/: gemini_sdk_example.ts  package-lock.json  package.json  vercel_ai_response.ts
example_workflows/: README.md  pyproject.toml
example_workflows/demo_account_setup/: README.md
example_workflows/demo_account_setup_TS/: basic_logging.ts  create_dataset.ts  create_evaluator.ts  create_log_scores.ts  create_prompt.ts  test_create_log_score.ts
example_workflows/multi_modal_tool_evals/: README.md  agent.py  get_logs.py
example_workflows/multi_modal_tool_evals/constants/: __init__.py
example_workflows/src/example_workflows/experiment_v2_workflows/: complete_completion_experiment_workflow.ipynb  complete_custom_experiment_workflow.ipynb  complete_prompt_workflow.ipynb
example_workflows/src/example_workflows/webhook_rate_limit/: README.md
mastra_weather_agents/: package.json  pnpm-lock.yaml
next_js_be_openai/keywordsai-tracing-next-js/: .gitignore  README.md  package-lock.json  package.json
nextjs_openai/: README.md
openai-agents-python-example/: pyproject.toml
openai-agents-python-example/agent_patterns/: agents_as_tools_test.py  deterministic_test.py  input_guardrails_test.py  llm_as_a_judge_test.py  (+3 more)
vercel_ai_next_fastapi/: .env.local.example  README.md  pyproject.toml
vercel_ai_next_openai/: .env.local.example  README.md  instrumentation.ts  package.json
(+82 files in other folders)
