[tool.poetry]
name = "example-workflows"
version = "0.1.0"
description = ""
authors = ["Raymond Huang <raymond@keywordsai.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.4.5"
openai = "^1.102.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
